--- a/nosotros.html
+++ b/nosotros.html
@@ -354,42 +354,45 @@
 </head>
 <body>
     <header>
-    <nav class="navbar">
-        <div class="container navbar-content">
-            <a href="index.html" class="logo">
-                <img src="assets/img/Greenhaul-fl.svg" alt="Logo de GreenHaul">
-            </a>
-            <button class="navbar-toggler" id="navbarToggler" aria-label="Toggle navigation">
-                <span class="toggler-icon"></span>
-                <span class="toggler-icon"></span>
-                <span class="toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse" id="navbarCollapse">
-                <ul class="nav-links-list">
-                    <li><a href="index.html" class="nav-link">Inicio</a></li>
-                    <li><a href="productos.html" class="nav-link">Productos</a></li>
-                    <li><a href="servicios.html" class="nav-link">Servicios</a></li>
-                    <li><a href="nosotros.html" class="nav-link">Nosotros</a></li>
-                    <li><a href="contacto.html" class="nav-link">Contacto</a></li>
-                    <li><a href="faq.html" class="nav-link">Preguntas</a></li>
-                </ul>
-                <div class="navbar-right-items">
-                    <div class="navbar-user-actions" id="navbarUserActions">
-                        <a href="login.html" class="btn btn-outline" id="loginBtn">Iniciar Sesión</a>
-                        <a href="cuenta.html" class="nav-link" id="accountLink" style="display: none;">Hola, <span id="userName"></span></a>
-                        <button class="btn-tertiary" id="logoutBtn" style="display: none;" title="Cerrar Sesión"><i class="fas fa-sign-out-alt"></i></button>
-                    </div>
-                    <div class="nav-icons">
-                        <a href="#" class="nav-icon cart-icon" id="cartIcon">
-                            <i class="fas fa-shopping-cart"></i>
-                            <span class="cart-count" id="cartCount">0</span>
-                        </a>
+        <nav class="navbar">
+            <div class="container navbar-content">
+                <a href="index.html" class="logo">
+                    <img src="assets/img/Greenhaul-fl.svg" alt="Logo de GreenHaul" />
+                </a>
+                <button class="navbar-toggler" id="navbarToggler" aria-label="Toggle navigation">
+                    <span class="toggler-icon"></span>
+                    <span class="toggler-icon"></span>
+                    <span class="toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse" id="navbarCollapse">
+                    <ul class="nav-links-list">
+                        <li><a href="index.html" class="nav-link">Inicio</a></li>
+                        <li><a href="productos.html" class="nav-link">Productos</a></li>
+                        <li><a href="servicios.html" class="nav-link">Servicios</a></li>
+                        <li><a href="nosotros.html" class="nav-link active">Nosotros</a></li>
+                        <li><a href="contacto.html" class="nav-link">Contacto</a></li>
+                        <li><a href="faq.html" class="nav-link">Preguntas</a></li>
+                    </ul>
+                    <div class="navbar-right-items">
+                        <div class="navbar-user-actions" id="navbarUserActions">
+                            <!-- Solo uno de estos será visible según la sesión JS -->
+                            <a href="login.html" class="btn btn-outline" id="loginBtn">Iniciar Sesión</a>
+                            <a href="cuenta.html" class="nav-link" id="accountLink" style="display: none;">Hola, <span id="userName"></span></a>
+                            <button class="btn-tertiary" id="logoutBtn" style="display: none;" title="Cerrar Sesión">
+                                <i class="fas fa-sign-out-alt"></i>
+                            </button>
+                        </div>
+                        <div class="nav-icons">
+                            <a href="#" class="nav-icon cart-icon" id="cartIcon">
+                                <i class="fas fa-shopping-cart"></i>
+                                <span class="cart-count" id="cartCount">0</span>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </nav>
-</header>
+        </nav>
+    </header>
 
     <main class="page-content">
         <!-- Hero Section Tecnológico -->
