cambio de prueba 2

--- a/nosotros.html
+++ b/nosotros.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
 <body>
+    <!-- HEADER GLOBAL -->
     <header>
         <nav class="navbar">
             <div class="container navbar-content">
@@ -47,58 +48,145 @@
             </div>
         </nav>
     </header>
+
     <main class="page-content">
-        <section class="section">
+        <!-- Hero Section Bonito -->
+        <section class="hero" style="background: linear-gradient(90deg, #e0f7fa 0%, #f0fff5 100%);">
+            <div class="hero-content">
+                <p class="hero-subtitle">Conoce a GreenHaul</p>
+                <h1>Transformamos <span class="highlight-sostenible">mudanzas</span> en experiencias sostenibles</h1>
+                <p>
+                    <strong>GreenHaul</strong> es mucho más que una empresa de mudanzas ecológicas: somos un equipo apasionado que cree que cada acción cuenta para el planeta. Nuestra misión es liderar una revolución verde en el sector logístico, haciendo que cada mudanza sea fácil, eficiente y respetuosa con el medio ambiente. 
+                </p>
+                <div class="hero-buttons">
+                    <a href="productos.html" class="btn btn-primary">Conoce nuestros productos</a>
+                    <a href="servicios.html" class="btn btn-secondary">Descubre nuestros servicios</a>
+                </div>
+            </div>
+        </section>
+
+        <!-- Nuestra Filosofía -->
+        <section class="section about-intro-section">
             <div class="container">
                 <div class="section-title">
-                    <h2>Sobre <span class="highlight-sostenible">GreenHaul</span></h2>
-                    <p>Nuestra misión es revolucionar las mudanzas, haciéndolas sostenibles y libres de complicaciones.</p>
+                    <h2>Nuestros Valores</h2>
+                    <p>Nos mueve la pasión por el planeta, la innovación y el servicio humano. Cada mudanza GreenHaul contribuye a un mundo mejor.</p>
                 </div>
                 <div class="about-intro-grid">
                     <div class="intro-card">
                         <span class="intro-icon">🌱</span>
-                        <h3>Sostenibilidad</h3>
-                        <p>Comprometidos con la reducción de residuos y el impacto ambiental positivo.</p>
+                        <h3>Sostenibilidad Real</h3>
+                        <p>Reducimos el desperdicio de cartón y promovemos el uso de materiales reutilizables en cada mudanza.</p>
                     </div>
                     <div class="intro-card">
-                        <span class="intro-icon">🚚</span>
-                        <h3>Innovación</h3>
-                        <p>Implementamos tecnología y logística inteligente para tu mudanza.</p>
+                        <span class="intro-icon">🛡️</span>
+                        <h3>Cuidado & Confianza</h3>
+                        <p>Protegemos tus pertenencias y tu tranquilidad, porque sabemos que mudarse es más que cambiar de casa.</p>
+                    </div>
+                    <div class="intro-card">
+                        <span class="intro-icon">🚀</span>
+                        <h3>Innovación Verde</h3>
+                        <p>Mejoramos procesos y tecnología para que tu mudanza sea rápida, cómoda y sin complicaciones.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Impacto y Testimonios -->
+        <section class="section" style="background-color: #f8f9fa;">
+            <div class="container">
+                <div class="section-title">
+                    <h2>Impacto Positivo</h2>
+                    <p>¡Miles de familias y empresas ya se mudaron con GreenHaul y juntos evitamos toneladas de cartón!</p>
+                </div>
+                <div class="features-grid">
+                    <div class="feature-item">
+                        <span class="feature-icon">♻️</span>
+                        <h3>+45,000 cajas de cartón evitadas</h3>
+                        <p>Cada mudanza con GreenHaul es una victoria para la Tierra.</p>
+                    </div>
+                    <div class="feature-item">
+                        <span class="feature-icon">🏆</span>
+                        <h3>96% satisfacción</h3>
+                        <p>Nuestro servicio tiene la mejor calificación en el sector por atención y calidad.</p>
+                    </div>
+                    <div class="feature-item">
+                        <span class="feature-icon">🌎</span>
+                        <h3>Compromiso Social</h3>
+                        <p>Participamos activamente en iniciativas ecológicas y apoyamos causas ambientales.</p>
+                    </div>
+                    <div class="feature-item">
+                        <span class="feature-icon">💬</span>
+                        <h3>Testimonios Reales</h3>
+                        <p>“Me mudé sin estrés y sin contaminar. ¡GreenHaul cambió mi forma de mudarme!” – <strong>Ana G.</strong></p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Nuestro Equipo -->
+        <section class="section team-enhanced" style="background-color: #e7fcef;">
+            <div class="container">
+                <div class="section-title">
+                    <h2>El Equipo GreenHaul</h2>
+                    <p>Personas creativas, comprometidas y cercanas que hacen posible la revolución verde.</p>
+                </div>
+                <div class="about-intro-grid">
+                    <div class="intro-card">
+                        <span class="intro-icon">👨‍💼</span>
+                        <h3>Juan Pérez</h3>
+                        <p>Fundador y CEO, visionario de la logística sostenible. Cree que cada mudanza puede ser una oportunidad para cuidar el planeta.</p>
+                    </div>
+                    <div class="intro-card">
+                        <span class="intro-icon">👩‍💻</span>
+                        <h3>Ana Gómez</h3>
+                        <p>Directora de Operaciones. Ama perfeccionar procesos y crear experiencias memorables para los clientes.</p>
+                    </div>
+                    <div class="intro-card">
+                        <span class="intro-icon">🧰</span>
+                        <h3>Carlos Ruiz</h3>
+                        <p>Responsable de Flota. Cuida cada caja y cada entrega como si fueran propias.</p>
                     </div>
                     <div class="intro-card">
                         <span class="intro-icon">🤝</span>
-                        <h3>Comunidad</h3>
-                        <p>Creemos en el poder de la colaboración y el servicio cercano.</p>
+                        <h3>Sofía López</h3>
+                        <p>Atención al Cliente. Siempre dispuesta a ayudar y resolver cualquier duda con una sonrisa.</p>
                     </div>
                 </div>
-                <div style="margin-top:40px;">
-                    <h3>¿Quiénes Somos?</h3>
-                    <p>GreenHaul nació para cambiar la forma en que México se muda: menos cartón, menos estrés y más planeta. Nuestro equipo está formado por personas apasionadas por la logística, la tecnología y el medio ambiente.</p>
-                </div>
-                <!-- Puedes agregar más contenido aquí (historia, valores, equipo, etc.) -->
             </div>
         </section>
+
+        <!-- Nuestra Historia -->
         <section class="section">
             <div class="container">
                 <div class="section-title">
-                    <h2>Nuestra Trayectoria</h2>
-                    <p>Descubre cómo GreenHaul ha evolucionado a lo largo de los años y cómo nos proyectamos hacia el futuro.</p>
+                    <h2>Nuestra Historia</h2>
+                    <p>De una idea ecológica a miles de mudanzas sostenibles en México.</p>
                 </div>
                 <div>
-                    <h3>Origen</h3>
-                    <p>GreenHaul inició como un proyecto universitario enfocado en la logística sostenible. Con el tiempo, la idea se transformó en una empresa que prioriza el bienestar ambiental y la satisfacción del cliente.</p>
-                    <h3>Primeros Clientes</h3>
-                    <p>En nuestros primeros meses, colaboramos con familias locales, quienes nos ayudaron a perfeccionar nuestro servicio y validar la necesidad de soluciones ecológicas para mudanzas.</p>
-                    <h3>Expansión y Tecnología</h3>
-                    <p>La implementación de tecnología para reservas en línea y seguimiento de entregas nos permitió ampliar nuestra cobertura y mejorar la experiencia de los usuarios.</p>
-                    <h3>Compromiso Social</h3>
-                    <p>Cada año, GreenHaul dona parte de sus ingresos a organizaciones ambientales y realiza campañas de concientización para reducir el uso de cartón desechable en la CDMX.</p>
-                    <h3>Visión a Futuro</h3>
-                    <p>Buscamos expandirnos a otras ciudades y agregar nuevos servicios como asesoría de mudanza, embalaje profesional y renta de accesorios reutilizables para el hogar.</p>
+                    <p>
+                        GreenHaul nació en 2022 tras una mudanza frustrante llena de cartón roto y una pregunta: <em>¿Cómo podemos hacer esto mejor?</em> 
+                        Desde entonces, hemos crecido gracias a la pasión y confianza de nuestros clientes. Hoy, somos líderes en mudanzas sostenibles y seguimos innovando cada día.
+                    </p>
+                    <ul>
+                        <li><strong>2022:</strong> La idea y las primeras cajas reutilizables.</li>
+                        <li><strong>2023:</strong> Expansión en CDMX y primeras alianzas verdes.</li>
+                        <li><strong>2024:</strong> Lanzamiento de la plataforma digital y cobertura metropolitana.</li>
+                        <li><strong>2025:</strong> Más de 2,500 mudanzas exitosas y planes para llegar a más ciudades.</li>
+                    </ul>
                 </div>
             </div>
         </section>
+
+        <!-- CTA final -->
+        <section class="section" style="background: linear-gradient(90deg, #e0f7fa 0%, #e7fcef 100%);">
+            <div class="container" style="text-align:center;">
+                <h2>¿Listo para mudarte sin complicaciones y sin contaminar?</h2>
+                <a href="productos.html" class="btn btn-primary" style="margin-top:20px;">Comienza tu mudanza ecológica</a>
+            </div>
+        </section>
     </main>
+    <!-- FOOTER GLOBAL -->
     <footer class="footer">
         <div class="container footer-content">
             <div class="footer-info">
