--- a/nosotros.html
+++ b/nosotros.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Nosotros - GreenHaul</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
     <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/pages.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
 </head>
 <body>
-    <!-- HEADER GLOBAL -->
     <header>
         <nav class="navbar">
             <div class="container navbar-content">
@@ -48,11 +48,10 @@
             </div>
         </nav>
     </header>
-
     <main class="page-content">
         <!-- Hero Section Bonito -->
         <section class="hero" style="background: linear-gradient(90deg, #e0f7fa 0%, #f0fff5 100%);">
-            <div class="hero-content">
+            <div class="container hero-content">
                 <p class="hero-subtitle">Conoce a GreenHaul</p>
                 <h1>Transformamos <span class="highlight-sostenible">mudanzas</span> en experiencias sostenibles</h1>
                 <p>
@@ -65,7 +64,7 @@
             </div>
         </section>
 
-        <!-- Nuestra Filosofía -->
+        <!-- Nuestros Valores -->
         <section class="section about-intro-section">
             <div class="container">
                 <div class="section-title">
@@ -186,7 +185,6 @@
             </div>
         </section>
     </main>
-    <!-- FOOTER GLOBAL -->
     <footer class="footer">
         <div class="container footer-content">
             <div class="footer-info">
